k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: my-nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
        - name: my-nodejs
          image: nodejs-image:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
