k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-nodejs-svc
spec:
  ports:
    - name: http-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: nodejs-app
